--- a/server/app/view/index.html
+++ b/server/app/view/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+{{ helper.assets.getStyle('umi.css') | safe }}
 <meta charset="utf-8" />
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
